--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ Tutorials/Library/
 [Ll]ogs/
 [Mm]emoryCaptures/
 
-# Never ignore Asset meta data
-!/[Aa]ssets/**/*.meta
+# Never ignore Asset meta data YAAASSSS
+#!/[Aa]ssets/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
